<resources>
    <string name="app_name">AugmentEPF</string>
    <string name="app_need_location">This app needs access to your location</string>
    <string name="app_need_location_message">Please grant access to your location so that this app can
        detect beacons in the background.</string>
    <string name="text_classroom">Pick a classroom</string>
    <string name="guidanceTurnLeft">Turn left</string>
    <string name="guidanceTurnRight">Turn right</string>
    <string name="guidanceStraightAhead">Straight ahead</string>
    <string name="guidanceProblem">Problem with this direction</string>
    <string name="guidanceFor">for</string>
    <string name="guidanceMeters">meters</string>
    <string name="text_when">When?</string>
    <string name="text_dateButton">Choose the date</string>
    <string name="text_hourButton">Choose the time</string>
    <string name="text_warning">Do you want to be warned?</string>
    <string name="text_warning_alerts">Choose how to be warned</string>
    <string-array name="alerts">
        <item>None</item>
        <item>Notification</item>
        <item>Vibration</item>
        <item>Alarm</item>
        <item>E-mail</item>
    </string-array>
    <string name="text_validate">Save the route</string>
    <string name="action_settings">Settings</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="notif_user_summary">Enable/disable notifications</string>
    <string name="localisation">Localization</string>
    <string name="loc_user_summary">Enable/disable the localization of the device</string>
    <string name="user_parameters">User parameters</string>
    <string name="type">Type</string>
    <string name="information_user_type">Display information about your user type</string>
    <string name="typeUser" translatable="false" />
    <string-array name="user_type_array">
        <item>Student</item>
        <item>Visitor</item>
        <item>Teacher</item>
        <item>Speaker</item>
        <item>Admin</item>
    </string-array>
    <string-array name="new_user_type_array">
        <item>Student</item>
        <item>Visitor</item>
        <item>Teacher</item>
        <item>Speaker</item>
    </string-array>
    <string-array name="user_type_values_array">
        <item>S</item>
        <item>V</item>
        <item>T</item>
        <item>C</item>
        <item>A</item>
    </string-array>
    <string name="specific_attribute">Specific Attributes</string>
    <string name="select_specific_attribute">Select specific attributes</string>
    <string-array name="specific_attribute_array">
        <item>None</item>
        <item>Voice guidance</item>
        <item>Elevator</item>
        <item>Both</item>
    </string-array>
    <string-array name="specific_attribute_values_array">
        <item>0</item>
        <item>V</item>
        <item>A</item>
        <item>VA</item>
    </string-array>
    <string name="ical_link">iCal link</string>
    <string name="ical_summary">Allows the edit of the account\'s link</string>
    <string name="format_ical">Must look like this: http://edt.epf.fr/pegasus/ical.php?v1=…</string>
    <string name="changeEmailButton">changeEmailButton</string>
    <string name="summaryChangeEmail">If you want to change your current email</string>
    <string name="titleMailButton">Reset your email</string>
    <string name="oldChangeMailButton">Enter old email</string>
    <string name="newChangeMailButton">Enter new email</string>
    <string name="confirmChangeMailButton">Confirm new email</string>
    <string name="pwForMail">Enter your password</string>
    <string name="emailToastCancelled">Email change cancelled</string>
    <string name="resetPwButton">resetPwButton</string>
    <string name="summaryChangePw">If you want to change your current password</string>
    <string name="titleResetPwButton">Reset your password</string>
    <string name="oldResetPwButton">Enter old password</string>
    <string name="newResetPwButton">Enter new password</string>
    <string name="confirmNewResetPwButton">Confirm new password</string>
    <string name="pwToastCancelled">Password change cancelled</string>
    <string name="pwChangeOk">Password changed!</string>
    <string name="pwChangeProblemOld">Problem with the old password</string>
    <string name="pwChangeProblemNew">New passwords are not identical</string>
    <string name="emailChangeOk">Email address changed!</string>
    <string name="emailChangeProblemEmail">Your e-mail confirmation does not match your e-mail</string>
    <string name="emailChangeProblemPw">Wrong password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nav_mode">Navigation mode</string>
    <string name="select_nav_mode">Select the guidance mode</string>
    <string name="nav_parameters">Navigation parameters</string>
    <string-array name="navigation_array">
        <item>Plan</item>
        <item>Camera</item>
    </string-array>
    <string-array name="navigation_values_array">
        <item>P</item>
        <item>C</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="connect">Sign in</string>
    <string name="planned_trajectory">Planned routes</string>
    <string name="plan_trajectory">Plan a route</string>
    <string name="trajectory_history">Route viewer</string>
    <string name="contact">Contact us</string>
    <string name="go">Go!</string>
    <string name="login">Login</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="validate">Sign in</string>
    <string name="no_account">No account yet?</string>
    <string name="create">Register</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="account_created">Account created</string>
    <string name="admin_activity_title">Administrative Tool</string>
    <string name="nearby_points_of_interest">Nearby points of interest</string>
    <string name="available_classrooms">Available classrooms</string>
    <string name="not_localized">You haven\'t been located yet</string>
    <string name="man_restroom">Men\'s restroom</string>
    <string name="info_restroom_man">Restroom for men.</string>
    <string name="woman_restroom">Women\'s restroom</string>
    <string name="info_restroom_woman">Restroom for women.</string>
    <string name="password_password_confirmation_no_match">Your password confirmation does not match your password</string>
    <string name="enter_login">Please enter a login</string>
    <string name="enter_email">Please enter an e-mail</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_password_confirmation">Please enter a password confirmation</string>
    <string name="error_server">Something went wrong with the server</string>
    <string name="need_internet_account">You need an internet connection to create an account</string>
    <string name="connected">Authentication successful</string>
    <string name="no_internet">You are not connected to internet</string>
    <string name="logout">Log out</string>
    <string name="title_change_mail">Change your email</string>
    <string name="title_reset_pw">Reset password</string>
    <string name="userTypeAnonym">Anonymous</string>
    <string name="failed_connect_calendar">Failed to load calendar. Please make sure you are connected to EPF Wi-Fi.</string>
    <string name="current">Today</string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="previous"><![CDATA[<<]]></string>
    <string name="enter_ical">Enter your iCal Link</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thurday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ical">iCal</string>
    <string name="to">to</string>
    <string name="go_to">Do you want to go to</string>
    <string name="define_path">Define route</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="go_to_next_class">Go to next class</string>
    <string name="no_next_class_found">Couldn\'t find your next class. Sorry…</string>
    <string name="admin_name_missing">Name required</string>
    <string name="admin_target_missing">None selected</string>
    <string name="confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="admin_edit_beacons">Edit beacons</string>
    <string name="admin_edit_poi">Edit points of interests</string>
    <string name="admin_xcoord">X Coordinate:</string>
    <string name="admin_ycoord">Y Coordinate:</string>
    <string name="admin_name">Name:</string>
    <string name="admin_locate">Closest beacon</string>
    <string name="admin_remove">Remove</string>
    <string name="admin_save">Add</string>
    <string name="admin_2nf_floor">2nd Floor</string>
    <string name="admin_1st_floor">1st Floor</string>
    <string name="admin_ground_floor">Ground Floor</string>
    <string name="admin_lower_floor">Lower Floor</string>
    <string name="admin_update">Update?</string>
    <string name="admin_save_new">Save as new?</string>
    <string name="admin_edit_rooms">Edit rooms</string>
    <string name="admin_detector_failed">None detected</string>
    <string name="admin_map_error">Map not available</string>
    <string name="zoom">Zoom</string>
    <string name="description">This application was developed by the ARC team as part of the
     AugmentEPF project 2017</string>
    <string name="partner_with">In partnership with</string>
    <string name="localisation_system">Localization system by</string>
    <string name="contacts_info">Contact information</string>
    <string name="contacts_mails_left">
        Anthony Prudhomme \n anthony.prudhomme@epfedu.fr \n \n
        Cécile Tran \n cecile.tran@epfedu.fr \n \n
        Hugo Ruiz \n hugo.ruiz@epfedu.fr \n \n
        Guilhem Pequillat \n guilhem.pequillat@epfedu.fr

    </string>
    <string name="contacts_mails_right">
        Coline Patris \n coline.patris@epfedu.fr \n \n
        Jérémy Duong \n jeremy.duong@epfedu.fr\n \n
        Antoine Goubin \n antoine.goubin@epfedu.fr
    </string>
    <string name="permission_not_granted">You must grant permission to use this app</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="destination">Destination :</string>
    <string name="guidanceIn">in</string>
    <string name="starting_guidance">Start guidance</string>
    <string name="save_cred">Save login and password</string>
    <string name="log_in_automatically">Log in automatically</string>
    <string name="filter_title_augmentepf">AugmentEPF</string>
    <string name="watch_tuto">Would you like to watch the tutorial video?</string>
    <string name="path_planning_choose_date">You must choose when you want to start your path.</string>
    <string name="path_planning_when_warn">You must choose when you want to be warned.</string>
    <string name="path_planning_how_warn">You must choose how you want to be warned.</string>
    <string name="path_planning_choose_place">You didn\'t enter a valid destination.</string>
</resources>