<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General parameters -->
    <PreferenceCategory
        android:title="@string/general">

        <!-- Notification -->
        <CheckBoxPreference
            android:key="notification_user"
            android:title="@string/notification"
            android:summary="@string/notif_user_summary"
            android:defaultValue="true">
        </CheckBoxPreference>

        <!-- Localisation -->
        <CheckBoxPreference
            android:key="localisation_user"
            android:title="@string/localisation"
            android:summary="@string/loc_user_summary"
            android:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>

    <!-- User parameters -->
    <PreferenceCategory
        android:title="@string/user_parameters">

        <!-- User type -->
        <ListPreference
            android:key="type_user"
            android:title="@string/type"
            android:summary="@string/select_user_type"
            android:entryValues="@array/user_type_values_array">
        </ListPreference>

        <!-- Specific attribute -->
        <ListPreference
            android:key="specific_attribute_user"
            android:title="@string/specific_attribute"
            android:summary="@string/select_specific_attribute"
            android:entries="@array/specific_attribute_array"
            android:entryValues="@array/specific_attribute_values_array">
        </ListPreference>

        <!-- Lien iCal -->
        <EditTextPreference
            android:key="edit"
            android:title="@string/ical_link"
            android:summary="@string/ical_summary"
            android:dialogTitle="@string/ical_link"
            android:dialogMessage="@string/format_ical"
            android:inputType="text"
            android:singleLine="true">
        </EditTextPreference>
    </PreferenceCategory>

    <!-- Navigation parameters -->
    <PreferenceCategory
        android:title="@string/nav_parameters">

        <!-- Navigation mode -->
        <ListPreference
            android:key="mode_navigation"
            android:title="@string/nav_mode"
            android:summary="@string/select_nav_mode"
            android:entries="@array/navigation_array"
            android:entryValues="@array/navigation_values_array">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>