<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"/>

    <ImageView
        android:layout_width="210dp"
        android:layout_height="90dp"
        android:src="@drawable/arc_logo"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partner_with"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@drawable/epf_logo"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_info"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_mails_left"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_mails_right"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>